--- a/blogr-landing-page-main/style.css
+++ b/blogr-landing-page-main/style.css
@@ -201,6 +201,7 @@ header main .btn-cont button {
     padding: 13px 10px;
     width: 140px;
     font-size: 14px;
+    white-space:nonwrap;
     font-weight: 600;
     border-radius: 35px;
     border: none;
